# gisum

./: .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml  tox.ini
gisum/: config.py  example.py  lib.py  main.py
tests/: test_example.py
