[tool.poetry]
name = "gisum"
version = "0.0.1"
description = "Simple backend server using GPT to generate info summary"
authors = ["Clouder0 <clouder0@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.3.3"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mypy = "^1.7.0"
tox = "^4.11.3"
pre-commit = "^3.5.0"
flake8 = "^6.1.0"
black = "^23.11.0"
isort = "^5.12.0"
pytest-cov = "^4.1.0"
pytest-random-order = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
